--- a/TabloidMVC/Views/Shared/_Layout.cshtml
+++ b/TabloidMVC/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                                 <a class="nav-link  rounded " asp-area="" asp-controller="Post" asp-action="Index">POSTS</a>
                             </li>
                             <li class="nav-item ">
+                                <a class="nav-link  rounded " asp-area="" asp-controller="Category" asp-action="Index">CATEGORY MANAGEMENT</a>
+                            </li>
+                            <li class="nav-item ">
                                 <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Logout">LOGOUT</a>
                             </li>
                         }
