--- a/TabloidMVC/Views/Shared/_Layout.cshtml
+++ b/TabloidMVC/Views/Shared/_Layout.cshtml
@@ -31,6 +31,10 @@
                             <li class="nav-item ">
                                 <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Logout">LOGOUT</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link rounded " asp-area="" asp-controller="UserProfile" asp-action="Index">USER PROFILES</a>
+                            </li>
+
                         }
                         else
                         {
