--- a/TabloidMVC/Views/Shared/_Layout.cshtml
+++ b/TabloidMVC/Views/Shared/_Layout.cshtml
@@ -34,6 +34,10 @@
                             <li class="nav-item">
                                 <a class="nav-link rounded " asp-area="" asp-controller="UserProfile" asp-action="Index">USER PROFILES</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link rounded " asp-area="" asp-controller="Post" asp-action="MyPosts">MY POSTS</a>
+                            </li>
+
 
                         }
                         else
