--- a/TabloidMVC/Views/Comment/Index.cshtml
+++ b/TabloidMVC/Views/Comment/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    <a asp-action="Details" asp-route-id=@Model..PostId class="btn btn-outline-primary mx-1">Return To Post</a>
+     <a asp-action="Details" asp-controller="Post" asp-route-id="@Url.Action()[@Url.Action().Length - 1]" class="btn btn-outline-primary mx-1">Return To Post</a> 
 </p>
 
 <h1>Index</h1>
