--- a/TabloidMVC/Views/Post/Delete.cshtml
+++ b/TabloidMVC/Views/Post/Delete.cshtml
@@ -1,5 +1,22 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model TabloidMVC.Models.Post
+
 @{
+    ViewData["Title"] = "Delete";
 }
+
+<h2>Delete Post</h2>
+
+<div>
+    <h3>Are you sure you want to delete this post?</h3>
+    <div>
+        <h4>@Model.Title</h4>
+        <p>Author: @Model.UserProfile.DisplayName</p>
+        <p>Category: @Model.Category.Name</p>
+    </div>
+
+    <form asp-action="DeleteConfirmed" method="post">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-secondary">Cancel</a>
+    </form>
+</div>
