--- a/TabloidMVC/Views/Category/Index.cshtml
+++ b/TabloidMVC/Views/Category/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Category Management</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-primary btn-block" title="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
