--- a/TabloidMVC/Views/Category/Edit.cshtml
+++ b/TabloidMVC/Views/Category/Edit.cshtml
@@ -17,7 +17,12 @@
                     <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <input type="submit" value="SAVE" class="btn btn-primary btn-block" />
+                    <div class="col-4">
+                        <input type="submit" value="SAVE" class="btn btn-primary btn-block" />
+                    </div>
+                    <div class="col-4">
+                        <a asp-action="Index" class="btn btn-danger btn-block">Cancel</a>
+                    </div>
                 </div>
             </form>
         </div>
