--- a/TabloidMVC/Views/Comment/Create.cshtml
+++ b/TabloidMVC/Views/Comment/Create.cshtml
@@ -31,7 +31,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Url.Action()[@Url.Action().Length - 1]">Back to List</a>
 </div>
 
 @section Scripts {
