--- a/TabloidMVC/Views/Post/Delete.cshtml
+++ b/TabloidMVC/Views/Post/Delete.cshtml
@@ -3,7 +3,7 @@
 <h2>Delete Post</h2>
 
 <div>
-    <h3>Are you sure you want to delete this post?</h3>
+    <h3>Are you sure you really want to delete this post?</h3>
     <div>
         <h4>@Model.Title</h4>
         <p>Author: @Model.UserProfile.DisplayName</p>
