cancel delete btn

--- a/TabloidMVC/Views/Category/Delete.cshtml
+++ b/TabloidMVC/Views/Category/Delete.cshtml
@@ -26,7 +26,7 @@
 
             <form asp-action="Delete">
                 <input type="submit" value="Delete" class="btn btn-danger btn-block" /> |
-                <a asp-action="Index">Back to List</a>
+                <a asp-action="Index" class="btn btn-primary btn-block">Cancel</a>
             </form>
         </div>
     </div>
