--- a/TabloidMVC/Views/Comment/Delete.cshtml
+++ b/TabloidMVC/Views/Comment/Delete.cshtml
@@ -49,8 +49,10 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+    <form asp-action="Delete" method="post">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" />
+        @* <input type="submit" value="Delete" class="btn btn-danger" /> | *@
+        <a asp-action="Index" asp-route-id="@Model.PostId" class="btn btn-secondary">Back to List</a>
     </form>
 </div>
