--- a/TabloidMVC/Views/Shared/_Layout.cshtml
+++ b/TabloidMVC/Views/Shared/_Layout.cshtml
@@ -22,32 +22,36 @@
                     <ul class="navbar-nav flex-grow-1">
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="nav-item ">
-                                <a class="nav-link rounded " asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link  rounded " asp-area="" asp-controller="Post" asp-action="Index">POSTS</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link  rounded " asp-area="" asp-controller="Category" asp-action="Index">CATEGORY MANAGEMENT</a>
-                            </li>
-                            <li class="nav-item ">
-                                <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Logout">LOGOUT</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link rounded " asp-area="" asp-controller="UserProfile" asp-action="Index">USER PROFILES</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link rounded " asp-area="" asp-controller="Post" asp-action="MyPosts">MY POSTS</a>
-                            </li>
+                        <li class="nav-item ">
+                            <a class="nav-link rounded " asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link  rounded " asp-area="" asp-controller="Post" asp-action="Index">POSTS</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link  rounded " asp-area="" asp-controller="Category" asp-action="Index">CATEGORY MANAGEMENT</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Logout">LOGOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rounded " asp-area="" asp-controller="UserProfile" asp-action="Index">USER PROFILES</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link rounded " asp-area="" asp-controller="Post" asp-action="MyPosts">MY POSTS</a>
+                        </li>
+                        <li class="nav-item mx-0 mx-lg-1">
+
+                            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" asp-area="" asp-controller="Tag" asp-action="Index">TAG MANAGEMENT</a>
+                        </li>
 
 
                         }
                         else
                         {
-                            <li class="nav-item">
-                                <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Login">LOGIN</a>
-                            </li>
+                        <li class="nav-item">
+                            <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Login">LOGIN</a>
+                        </li>
                         }
                     </ul>
                 </div>
