--- a/TabloidMVC/Views/Shared/_Layout.cshtml
+++ b/TabloidMVC/Views/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
                             <li class="nav-item">
                                 <a class="nav-link  rounded " asp-area="" asp-controller="Account" asp-action="Login">LOGIN</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link rounded" asp-area="" asp-controller="UserProfile" asp-action="Register">REGISTER</a>
+                            </li>
                         }
                     </ul>
                 </div>
