--- a/TabloidMVC/Views/UserProfile/Details.cshtml
+++ b/TabloidMVC/Views/UserProfile/Details.cshtml
@@ -44,7 +44,7 @@
             @Html.DisplayFor(model => model.CreateDateTime)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserType.Name)
+            User Type
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UserType.Name)
